Started Spotify API Integration

--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "react-dom": "^16.8.6",
     "react-scripts": "3.0.1"
   },
-  "main" : "public/electron.js",
+  "main": "public/electron.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\""
+    "electron-dev": "concurrently \"BROWSER=none npm start\" \"nodemon ./server/index.js\" \"wait-on http://localhost:3000 && wait-on http://localhost:8888 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -33,8 +33,14 @@
   },
   "devDependencies": {
     "concurrently": "^4.1.1",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "electron": "^6.0.0",
     "electron-builder": "^21.1.5",
+    "express": "^4.17.1",
+    "nodemon": "^1.19.1",
+    "querystring": "^0.2.0",
+    "request": "^2.88.0",
     "wait-on": "^3.3.0"
   }
 }
