--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "electron-is-dev": "^1.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
+    "react-scripts": "3.0.1",
+    "spotify-web-api-js": "^1.2.0"
   },
   "main": "public/electron.js",
   "scripts": {
@@ -14,7 +15,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "electron-dev": "concurrently \"BROWSER=none npm start\" \"nodemon ./server/index.js\" \"wait-on http://localhost:3000 && wait-on http://localhost:8888 && electron .\""
+    "electron-dev": "concurrently \"BROWSER=none npm start\" \"wait-on http://localhost:3000 && electron .\""
   },
   "eslintConfig": {
     "extends": "react-app"
