--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.4.2",
+    "@material-ui/icons": "^4.4.1",
     "electron-is-dev": "^1.1.0",
     "is-electron": "^2.2.0",
     "react": "^16.8.6",
@@ -40,7 +42,7 @@
     "electron": "^6.0.0",
     "electron-builder": "^21.1.5",
     "express": "^4.17.1",
-    "nodemon": "^1.19.1",
+    "nodemon": "^1.19.2",
     "querystring": "^0.2.0",
     "request": "^2.88.0",
     "wait-on": "^3.3.0"
